--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
 
+<!-- start with wrapper -->
 <div class="wrapper">
 
     <div class="container">
+        <!-- start with headerSection -->
         <header>
-            <div>
+            <div class="headerSection">
                  <img src="images/Icons/navigation_menu.svg" alt="home navigation" title="home navigation">
                  <span>MENU</span>
             </div>
@@ -29,9 +31,11 @@
                 <img src="images/Icons/navigation_ticketkauf.svg" alt="ticket" title="ticket">
             </div>
         </header>
+        <!-- end of headerSection -->
 
+        <!-- start with mainSection -->
         <main>
-            <div class="mainSection">
+            <div class="titelSection">
 
                 <div>
                     <h1>Auf welche Musik stehst du?</h1>
@@ -47,7 +51,6 @@
                 <div>
                     <img src="images/Links/BigTeaser.png" alt="festival picture" title="festival picture">
                 </div>
-
 
             </div>
             <div class="magazinSection">
@@ -71,7 +74,6 @@
                 <div>
                     <button>MEHR ANZEIGEN</button>
                 </div>
-
 
             </div>
 
@@ -175,9 +177,12 @@
                          <button>MEHR ANZEIGEN</button>
                     </div>
 
-
             </div>
 
+        <!-- end of mainSection -->
+        </main>
+
+        <!-- start with footerSection -->
         <footer>
              <div class="footerSection">
 
@@ -202,14 +207,8 @@
                  </div>
              </div>
         </footer>
+        <!-- end of footerSection -->
 
-
-
-
-
-
-
-        </main>
     </div>
 </div>
 
