--- a/src/brandettickets.html
+++ b/src/brandettickets.html
@@ -154,8 +154,33 @@
             </div>
 
 
-
+        <!-- end of mainSection -->
         </main>
+
+        <!-- start with footerSection -->
+        <footer>
+            <div class="footerSection">
+
+                <div>
+                    <ul>
+                        <li>FESTIVAL</li>
+                        <li>MAGAZIN</li>
+                        <li>NEWS</li>
+                        <li><img src="images/Icons/navigation_backtotop.svg" alt="backtotop" title="backtotop"></li>
+                    </ul>
+                    <ul>
+                        <li><img src="images/Icons/socialmedia_facebook.svg" alt="facebook" title="facebook"></li>
+                        <li><img src="images/Icons/socialmedia_instagram.svg" alt="instagram" title="instagram"></li>
+                        <li><img src="images/Icons/socialmedia_snapchat.svg" alt="snapchat" title="snapchat"></li>
+                        <li><img src="images/Icons/socialmedia_youtube.svg" alt="youtube" title="youtube"></li>
+                        <li><img src="images/Icons/socialmedia_twitter.svg" alt="twitter" title="twitter"></li>
+                    </ul>
+                </div>
+
+
+            </div>
+        </footer>
+        <!-- end of footerSection -->
 
     </div>
 
