--- a/src/payment.html
+++ b/src/payment.html
@@ -5,11 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>login</title>
+    <title>Payment</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+
 
 <!-- start with wrapper -->
 <div class="wrapper">
@@ -32,27 +33,45 @@
             </div>
         </header>
         <!-- end of headerSection -->
+
+        <!-- start with mainSection -->
         <main>
             <div class="loginSection">
+
+                <h3>Zahlung</h3>
+                <select name="Kredit" id="card">
+                    <option value="VISA">VISA</option>
+                    <option value="MasterCard">MasterCard</option>
+                    <option value="PayPal">PayPal</option>
+                </select>
                 <form  method="post">
-                    <input type="text" placeholder="E-Mail Adresse">
+                    <input type="text" placeholder="Kartennummer">
                 </form>
                 <form  method="post">
-                    <input type="text" placeholder="Passwort">
+                    <input type="text" placeholder="MM / JJ">
+                </form>
+                <form  method="post">
+                    <input type="text" placeholder="CVC">
+                </form>
+                <form  method="post">
+                    <input type="text" placeholder="Karteninhaber">
                 </form>
 
                 <div>
-                    <button>ANMELDEN</button>
+                    <img src="images/Icons/tickets_securtiy.svg" alt="security" title="security">
+                    <button>CHF 895.- BEAZAHLEN</button>
                 </div>
 
-                <P>Passwort vergessen?</P>
-
-                <p>Neu bei FestivalLovers?</p>
-                <p>Als Gast bestellen</p>
-                <p>jetzt registrieren</p>
             </div>
 
+
+
+
+
         </main>
+
+
+
 
     </div>
 
