start with header styling _header.scss

--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,28 @@
 
     <div class="container">
         <!-- start with headerSection -->
-        <header>
-            <div class="headerSection">
-                 <img src="images/Icons/navigation_menu.svg" alt="home navigation" title="home navigation">
-                 <span>MENU</span>
+        <header class="headerSection">
+            <div class="headerSection__Icon headerSection__Icon--navLike">
+
+                <div class="headerSection__IconNav">
+                    <img src="images/Icons/navigation_menu.svg" alt="home navigation" title="home navigation">
+                    <span>MENU</span>
+                </div>
+                <div class="headerSection__IconLike">
+                    <img src="images/Icons/detail_like_filled.svg" alt="like Icon" title="like Icon">
+                </div>
+
             </div>
-            <div>
-                <img src="images/Icons/detail_like_filled.svg" alt="like Icon" title="like Icon">
-            </div>
-            <div>
-                <img src="images/Icons/navigation_login.svg" alt="login" title="login">
-            </div>
-            <div>
-                <img src="images/Icons/navigation_ticketkauf.svg" alt="ticket" title="ticket">
+
+            <div  class="headerSection__Icon headerSection__Icon--loginTicket">
+
+                <div class="headerSection__IconLogin">
+                    <img src="images/Icons/navigation_login.svg" alt="login" title="login">
+                </div>
+                <div class="headerSection__IconTicket">
+                    <img src="images/Icons/navigation_ticketkauf.svg" alt="ticket" title="ticket">
+                </div>
+
             </div>
         </header>
         <!-- end of headerSection -->
@@ -50,7 +59,7 @@
                     <button>FILTER ANZEIGEN</button>
                 </div>
                 <div>
-                    <img src="images/Links/BigTeaser.png" alt="festival picture" title="festival picture">
+<!--                    <img src="images/Links/BigTeaser.png" alt="festival picture" title="festival picture">-->
                 </div>
 
             </div>
@@ -87,7 +96,7 @@
                 <h2>Entdeckungen</h2>
                 <p>Sei offen für neues und geniesse unerwartete Musikerlebnisse. Höre dir
                 die Samples an und entdecke deine Leidenschaft</p>
-                <div><img src="images/Links/DT_Audioplayer.png" alt="Audioplayer" title="Audioplayer"></div>
+<!--                <div><img src="images/Links/DT_Audioplayer.png" alt="Audioplayer" title="Audioplayer"></div>-->
 
 
             </div>
