center .titleSection _main.scss

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,21 @@
             <div class="headerSection__Icon headerSection__Icon--navLike">
 
                 <div class="headerSection__IconNav">
-                    <img src="images/Icons/navigation_menu.svg" alt="home navigation" title="home navigation">
+                    <svg width="24px" height="19px" viewBox="0 0 24 19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
+                        <title>navigation_menu</title>
+                        <desc>Created with Sketch.</desc>
+                        <defs></defs>
+                        <g id="Icons" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <g id="navigation_menu" transform="translate(-12.000000, -15.000000)" fill="#000000">
+                                <g transform="translate(12.000000, 15.000000)" id="Rectangle-path">
+                                    <rect x="0" y="0" width="24" height="2.38410596"></rect>
+                                    <rect x="0" y="15.8940397" width="24" height="2.38410596"></rect>
+                                    <rect x="0" y="7.94701987" width="24" height="2.38410596"></rect>
+                                </g>
+                            </g>
+                        </g>
+                    </svg>
                     <span>MENU</span>
                 </div>
                 <div class="headerSection__IconLike">
