--- a/src/payment.html
+++ b/src/payment.html
@@ -36,7 +36,7 @@
 
         <!-- start with mainSection -->
         <main>
-            <div class="loginSection">
+            <div class="paymentSection">
 
                 <h3>Zahlung</h3>
                 <select name="Kredit" id="card">
@@ -64,10 +64,7 @@
 
             </div>
 
-
-
-
-
+        <!-- end of mainSection -->
         </main>
 
 
