--- a/src/paymentconf.html
+++ b/src/paymentconf.html
@@ -36,7 +36,7 @@
 
         <!-- start with mainSection -->
         <main>
-            <div class="loginSection">
+            <div class="paymentSection">
 
                 <h3>Zahlung</h3>
                 <div>VISA</div>
