--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
             <div class="headerSection__Icon headerSection__Icon--navLike">
 
                 <div class="headerSection__IconNav">
-                    <svg width="24px" height="19px" viewBox="0 0 24 19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg width="24px" height="19px" viewBox="0 0 24 19" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
                         <title>navigation_menu</title>
                         <desc>Created with Sketch.</desc>
@@ -44,10 +45,11 @@
 
             </div>
 
-            <div  class="headerSection__Icon headerSection__Icon--loginTicket">
+            <div class="headerSection__Icon headerSection__Icon--loginTicket">
 
                 <div class="headerSection__IconLogin">
-                    <svg width="32px" height="32px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg width="32px" height="32px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg"
+                         xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
                         <title>navigation_login</title>
                         <desc>Created with Sketch.</desc>
@@ -63,7 +65,8 @@
                     </svg>
                 </div>
                 <div class="headerSection__IconTicket">
-                    <svg width="26.8px" height="23.92px" viewBox="0 0 24 22" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <svg width="26.8px" height="23.92px" viewBox="0 0 24 22" version="1.1"
+                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <!-- Generator: Sketch 39.1 (31720) - http://www.bohemiancoding.com/sketch -->
                         <title>navigation_ticketkauf</title>
                         <desc>Created with Sketch.</desc>
@@ -85,188 +88,170 @@
         <!-- start with mainSection -->
         <main>
             <div class="titelSection">
+                <h1>Auf welche Musik stehst du?</h1>
+                <h3>Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
+                    garantieren dir eine erlebnisreiche Festivalzeit
+                </h3>
+                <button class="titelSection__btn footerLabels">FILTER ANZEIGEN</button>
+                <img class="titelSection__bigPicture" src="images/Links/BigTeaser.png" alt="festival picture"
+                     title="festival picture">
+            </div>
+            <div class="magazinSection">
+                <h1>Magazin</h1>
 
-                <div>
-                    <h1>Auf welche Musik stehst du?</h1>
+                <div class="magazinSection__box">
+                    <h2 class="magazinSection__box--Title">Einfach bloss nichts vergessen</h2>
+                    <button class="magazinSection__box--Btn btnTabsHeader">LESEN</button>
+                    <div class="magazinSection__box--border"></div>
                 </div>
-                <div>
-                    <h3>Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
-                        garantieren dir eine erlebnisreiche Festivalzeit
-                    </h3>
+                <div class="magazinSection__box">
+                    <h2 class="magazinSection__box--Title">Wie soll ich mich bei Gewitter verhalten?</h2>
+                    <button class="magazinSection__box--Btn">LESEN</button>
+                    <div class="magazinSection__box--border"></div>
                 </div>
-                <div>
-                    <button class="titelSection__btn footerLabels">FILTER ANZEIGEN</button>
+                <div class="magazinSection__box">
+                    <h2 class="magazinSection__box--Title">Life Hacks für den Festivalbesuch</h2>
+                    <button class="magazinSection__box--Btn">LESEN</button>
+                    <div class="magazinSection__box--border"></div>
                 </div>
-                <div>
-                    <img class="titelSection__bigPicture" src="images/Links/BigTeaser.png" alt="festival picture" title="festival picture">
-                </div>
+
+
+                <button class="magazinSection__moreBtn">MEHR ANZEIGEN</button>
 
             </div>
 
-<!--            <div class="magazinSection">-->
+            <!--            <div class="bannerSection">-->
+            <!--                <img src="images/Links/MP_Banner@2.png" alt="App downloaden" title="App downloaden">-->
+            <!--            </div>-->
 
-<!--                <div>-->
-<!--                    <h1>Magazin</h1>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <h3>Einfach bloss nichts vergessen</h3>-->
-<!--                    <button>LESEN</button>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <h3>Wie soll ich mich bei Gewitter verhalten?</h3>-->
-<!--                    <button>LESEN</button>-->
-<!--                </div>-->
-<!--                <div>-->
-<!--                    <h3>Life Hacks für den Festivalbesuch</h3>-->
-<!--                    <button>LESEN</button>-->
-<!--                </div>-->
+            <!--            <div class="discoverySection">-->
 
-<!--                <div>-->
-<!--                    <button>MEHR ANZEIGEN</button>-->
-<!--                </div>-->
-
-<!--            </div>-->
-
-<!--            <div class="bannerSection">-->
-<!--                <img src="images/Links/MP_Banner@2.png" alt="App downloaden" title="App downloaden">-->
-<!--            </div>-->
-
-<!--            <div class="discoverySection">-->
-
-<!--                <h2>Entdeckungen</h2>-->
-<!--                <p>Sei offen für neues und geniesse unerwartete Musikerlebnisse. Höre dir-->
-<!--                die Samples an und entdecke deine Leidenschaft</p>-->
-<!--&lt;!&ndash;                <div><img src="images/Links/DT_Audioplayer.png" alt="Audioplayer" title="Audioplayer"></div>&ndash;&gt;-->
+            <!--                <h2>Entdeckungen</h2>-->
+            <!--                <p>Sei offen für neues und geniesse unerwartete Musikerlebnisse. Höre dir-->
+            <!--                die Samples an und entdecke deine Leidenschaft</p>-->
+            <!--&lt;!&ndash;                <div><img src="images/Links/DT_Audioplayer.png" alt="Audioplayer" title="Audioplayer"></div>&ndash;&gt;-->
 
 
-<!--            </div>-->
+            <!--            </div>-->
 
-<!--            <div class="newsSection">-->
-<!--                <h2>NEWS</h2>-->
-<!--    -->
-<!--                    <div>-->
-<!--                        <div>-->
-<!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
-<!--        -->
-<!--                        </div>-->
+            <!--            <div class="newsSection">-->
+            <!--                <h2>NEWS</h2>-->
+            <!--    -->
+            <!--                    <div>-->
+            <!--                        <div>-->
+            <!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
+            <!--        -->
+            <!--                        </div>-->
 
-<!--                        <div>3. Jun 2016</div>-->
-<!--        -->
-<!--                        <P>#festivallovers are you ready for a-->
-<!--                        #competition #follow @envirofoneshop-->
-<!--                        and we'll announce next week #festival</P>-->
-<!--                        -->
-<!--                        <div>-->
-<!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">-->
-<!--                            <span>13</span>-->
-<!--                        </div>-->
-<!--                    </div>-->
+            <!--                        <div>3. Jun 2016</div>-->
+            <!--        -->
+            <!--                        <P>#festivallovers are you ready for a-->
+            <!--                        #competition #follow @envirofoneshop-->
+            <!--                        and we'll announce next week #festival</P>-->
+            <!--                        -->
+            <!--                        <div>-->
+            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">-->
+            <!--                            <span>13</span>-->
+            <!--                        </div>-->
+            <!--                    </div>-->
 
-<!--                    <div>-->
-<!--                        <div>3. Jun 2016</div>-->
+            <!--                    <div>-->
+            <!--                        <div>3. Jun 2016</div>-->
 
-<!--                        <P>#festivallovers are you ready for a-->
-<!--                            #competition #follow @envirofoneshop-->
-<!--                            and we'll announce next week #festival-->
-<!--                        </P>-->
-
-
-<!--                        <div>-->
-<!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
-<!--                            <span>54</span>-->
-<!--                        </div>-->
-
-<!--                    </div>-->
-
-<!--                    <div>-->
-<!--                        <div>-->
-<!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
-
-<!--                        </div>-->
-
-<!--                        <div>1m</div>-->
-
-<!--                        <P>#jazzfest #festival #homeland #weekend</P>-->
-
-<!--                        <div><img src="images/Icons/detail_like_filled.svg" alt="like icon"><span>5</span></div>-->
-<!--                    </div>-->
-
-<!--                    <div>-->
-<!--                        <div>3. Jun 2016</div>-->
-
-<!--                        <P>#festivallovers are you ready for a-->
-<!--                            #competition #follow @envirofoneshop-->
-<!--                            and we'll announce next week #festival-->
-<!--                        </P>-->
+            <!--                        <P>#festivallovers are you ready for a-->
+            <!--                            #competition #follow @envirofoneshop-->
+            <!--                            and we'll announce next week #festival-->
+            <!--                        </P>-->
 
 
-<!--                        <div>-->
-<!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
-<!--                            <span>26</span>-->
-<!--                        </div>-->
+            <!--                        <div>-->
+            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
+            <!--                            <span>54</span>-->
+            <!--                        </div>-->
 
-<!--                    </div>-->
+            <!--                    </div>-->
 
-<!--                    <div>-->
-<!--                        <div>-->
-<!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
+            <!--                    <div>-->
+            <!--                        <div>-->
+            <!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
 
-<!--                        </div>-->
+            <!--                        </div>-->
 
-<!--                        <div>4h</div>-->
+            <!--                        <div>1m</div>-->
 
-<!--                        <P>italiaaa #boots #italy #germany #euro2016 #camping #festival #sexylegs</P>-->
+            <!--                        <P>#jazzfest #festival #homeland #weekend</P>-->
 
-<!--                        <div>-->
-<!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
-<!--                            <span>47</span>-->
-<!--                        </div>-->
-<!--                    </div>-->
+            <!--                        <div><img src="images/Icons/detail_like_filled.svg" alt="like icon"><span>5</span></div>-->
+            <!--                    </div>-->
 
-<!--                   d-->
+            <!--                    <div>-->
+            <!--                        <div>3. Jun 2016</div>-->
 
-<!--            </div>-->
+            <!--                        <P>#festivallovers are you ready for a-->
+            <!--                            #competition #follow @envirofoneshop-->
+            <!--                            and we'll announce next week #festival-->
+            <!--                        </P>-->
 
-<!--        &lt;!&ndash; end of mainSection &ndash;&gt;-->
-<!--        </main>-->
 
-<!--        &lt;!&ndash; start with footerSection &ndash;&gt;-->
-<!--        <footer>-->
-<!--             <div class="footerSection">-->
+            <!--                        <div>-->
+            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
+            <!--                            <span>26</span>-->
+            <!--                        </div>-->
 
-<!--                 <div>-->
-<!--                     <ul>-->
-<!--                         <li>FESTIVAL</li>-->
-<!--                         <li>MAGAZIN</li>-->
-<!--                         <li>NEWS</li>-->
-<!--                         <li><img src="images/Icons/navigation_backtotop.svg" alt="backtotop" title="backtotop"></li>-->
-<!--                     </ul>-->
-<!--                      <ul>-->
-<!--                          <li><img src="images/Icons/socialmedia_facebook.svg" alt="facebook" title="facebook"></li>-->
-<!--                          <li><img src="images/Icons/socialmedia_instagram.svg" alt="instagram" title="instagram"></li>-->
-<!--                          <li><img src="images/Icons/socialmedia_snapchat.svg" alt="snapchat" title="snapchat"></li>-->
-<!--                          <li><img src="images/Icons/socialmedia_youtube.svg" alt="youtube" title="youtube"></li>-->
-<!--                          <li><img src="images/Icons/socialmedia_twitter.svg" alt="twitter" title="twitter"></li>-->
-<!--                      </ul>-->
-<!--                 </div>-->
+            <!--                    </div>-->
 
-<!--                 <div>-->
+            <!--                    <div>-->
+            <!--                        <div>-->
+            <!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
 
-<!--                 </div>-->
-<!--             </div>-->
-<!--        </footer>-->
-<!--        &lt;!&ndash; end of footerSection &ndash;&gt;-->
+            <!--                        </div>-->
+
+            <!--                        <div>4h</div>-->
+
+            <!--                        <P>italiaaa #boots #italy #germany #euro2016 #camping #festival #sexylegs</P>-->
+
+            <!--                        <div>-->
+            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
+            <!--                            <span>47</span>-->
+            <!--                        </div>-->
+            <!--                    </div>-->
+
+            <!--                   d-->
+
+            <!--            </div>-->
+
+            <!--        &lt;!&ndash; end of mainSection &ndash;&gt;-->
+        </main>
+
+        <!--        &lt;!&ndash; start with footerSection &ndash;&gt;-->
+        <!--        <footer>-->
+        <!--             <div class="footerSection">-->
+
+        <!--                 <div>-->
+        <!--                     <ul>-->
+        <!--                         <li>FESTIVAL</li>-->
+        <!--                         <li>MAGAZIN</li>-->
+        <!--                         <li>NEWS</li>-->
+        <!--                         <li><img src="images/Icons/navigation_backtotop.svg" alt="backtotop" title="backtotop"></li>-->
+        <!--                     </ul>-->
+        <!--                      <ul>-->
+        <!--                          <li><img src="images/Icons/socialmedia_facebook.svg" alt="facebook" title="facebook"></li>-->
+        <!--                          <li><img src="images/Icons/socialmedia_instagram.svg" alt="instagram" title="instagram"></li>-->
+        <!--                          <li><img src="images/Icons/socialmedia_snapchat.svg" alt="snapchat" title="snapchat"></li>-->
+        <!--                          <li><img src="images/Icons/socialmedia_youtube.svg" alt="youtube" title="youtube"></li>-->
+        <!--                          <li><img src="images/Icons/socialmedia_twitter.svg" alt="twitter" title="twitter"></li>-->
+        <!--                      </ul>-->
+        <!--                 </div>-->
+
+        <!--                 <div>-->
+
+        <!--                 </div>-->
+        <!--             </div>-->
+        <!--        </footer>-->
+        <!--        &lt;!&ndash; end of footerSection &ndash;&gt;-->
 
     </div>
 </div>
-
-
-
-
-
-
-
-
 
 
 </body>
