--- a/src/index.html
+++ b/src/index.html
@@ -120,9 +120,19 @@
 
             </div>
 
-            <!--            <div class="bannerSection">-->
-            <!--                <img src="images/Links/MP_Banner@2.png" alt="App downloaden" title="App downloaden">-->
-            <!--            </div>-->
+            <div class="bannerSection">
+                <div class="bannerSection__box">
+                    <img class="bannerSection__pic" src="images/Links/iPhone-5S-Gold.svg" alt="">
+                </div>
+                <div class="bannerSection__content">
+                    <h1 class="bannerSection__title">Mit der App unabhängig am Festival feiern.</h1>
+                    <button class="bannerSection__btn">APP DOWNLOADEN</button>
+                    <div class="bannerSection__img">
+                        <img class="bannerSection__img--1" src="images/Links/google-play-badge.png" alt="">
+                        <img class="bannerSection__img--2" src="images/Links/google-play-badge.png" alt="">
+                    </div>
+                </div>
+            </div>
 
             <!--            <div class="discoverySection">-->
 
