start with discoverySection

--- a/src/index.html
+++ b/src/index.html
@@ -134,15 +134,20 @@
                 </div>
             </div>
 
-            <!--            <div class="discoverySection">-->
+            <div class="discoverySection">
 
-            <!--                <h2>Entdeckungen</h2>-->
-            <!--                <p>Sei offen für neues und geniesse unerwartete Musikerlebnisse. Höre dir-->
-            <!--                die Samples an und entdecke deine Leidenschaft</p>-->
-            <!--&lt;!&ndash;                <div><img src="images/Links/DT_Audioplayer.png" alt="Audioplayer" title="Audioplayer"></div>&ndash;&gt;-->
+                <h1 class="discoverySection__h1">Entdeckungen</h1>
+                <p class="discoverySection__p lead">
+                    Sei offen für neues und geniesse unerwartete
+                    Musikerlebnisse. Höre dir
+                    die Samples an und entdecke deine Leidenschaft</p>
+                <div class="discoverySection__img">
+                    <div class="discoverySection__img--jazz"></div>
+                </div>
 
 
-            <!--            </div>-->
+
+            </div>
 
             <!--            <div class="newsSection">-->
             <!--                <h2>NEWS</h2>-->
