new pics for bannerSection

--- a/src/index.html
+++ b/src/index.html
@@ -122,14 +122,14 @@
 
             <div class="bannerSection">
                 <div class="bannerSection__box">
-                    <img class="bannerSection__pic" src="images/Links/iPhone-5S-Gold.svg" alt="">
+                    <img class="bannerSection__pic" src="images/Links/iPhone-6s-Rose-Gold.svg" alt="iPhone picture">
                 </div>
                 <div class="bannerSection__content">
                     <h1 class="bannerSection__title">Mit der App unabhängig am Festival feiern.</h1>
                     <button class="bannerSection__btn">APP DOWNLOADEN</button>
                     <div class="bannerSection__img">
-                        <img class="bannerSection__img--1" src="images/Links/google-play-badge.png" alt="">
-                        <img class="bannerSection__img--2" src="images/Links/google-play-badge.png" alt="">
+                        <img class="bannerSection__img--1" src="images/Links/google-play-badge.png" alt="google-play">
+                        <img class="bannerSection__img--2" src="images/Links/google-play-badge.png" alt="google-play">
                     </div>
                 </div>
             </div>
