--- a/src/index.html
+++ b/src/index.html
@@ -87,36 +87,36 @@
 
         <!-- start with mainSection -->
         <main>
-            <div class="titelSection">
+            <div class="titleSection">
                 <h1>Auf welche Musik stehst du?</h1>
                 <h3>Egal auf was du stehst wir haben alles für deinen Musikgeschmack und
                     garantieren dir eine erlebnisreiche Festivalzeit
                 </h3>
-                <button class="titelSection__btn footerLabels">FILTER ANZEIGEN</button>
-                <img class="titelSection__bigPicture" src="images/Links/BigTeaser.png" alt="festival picture"
+                <button class="titleSection__btn footerLabels">FILTER ANZEIGEN</button>
+                <img class="titleSection__bigPicture" src="images/Links/BigTeaser.png" alt="festival picture"
                      title="festival picture">
             </div>
             <div class="magazinSection">
                 <h1>Magazin</h1>
 
-                <div class="magazinSection__box">
-                    <h2 class="magazinSection__box--Title">Einfach bloss nichts vergessen</h2>
-                    <button class="magazinSection__box--Btn btnTabsHeader">LESEN</button>
-                    <div class="magazinSection__box--border"></div>
+                <div class="magazineSection__box">
+                    <h2 class="magazineSection__box--Title">Einfach bloss nichts vergessen</h2>
+                    <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
+                    <div class="magazineSection__box--border"></div>
                 </div>
-                <div class="magazinSection__box">
-                    <h2 class="magazinSection__box--Title">Wie soll ich mich bei Gewitter verhalten?</h2>
-                    <button class="magazinSection__box--Btn">LESEN</button>
-                    <div class="magazinSection__box--border"></div>
+                <div class="magazineSection__box">
+                    <h2 class="magazineSection__box--Title">Wie soll ich mich bei Gewitter verhalten?</h2>
+                    <button class="magazineSection__box--Btn">LESEN</button>
+                    <div class="magazineSection__box--border"></div>
                 </div>
-                <div class="magazinSection__box">
-                    <h2 class="magazinSection__box--Title">Life Hacks für den Festivalbesuch</h2>
-                    <button class="magazinSection__box--Btn">LESEN</button>
-                    <div class="magazinSection__box--border"></div>
+                <div class="magazineSection__box">
+                    <h2 class="magazineSection__box--Title">Life Hacks für den Festivalbesuch</h2>
+                    <button class="magazineSection__box--Btn">LESEN</button>
+                    <div class="magazineSection__box--border"></div>
                 </div>
 
 
-                <button class="magazinSection__moreBtn">MEHR ANZEIGEN</button>
+                <button class="magazineSection__moreBtn">MEHR ANZEIGEN</button>
 
             </div>
 
