start with newsSection

--- a/src/index.html
+++ b/src/index.html
@@ -149,93 +149,84 @@
 
             </div>
 
-            <!--            <div class="newsSection">-->
-            <!--                <h2>NEWS</h2>-->
-            <!--    -->
-            <!--                    <div>-->
-            <!--                        <div>-->
-            <!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
-            <!--        -->
-            <!--                        </div>-->
+                        <div class="newsSection">
+                            <h1 class="newsSection__title">NEWS</h1>
 
-            <!--                        <div>3. Jun 2016</div>-->
-            <!--        -->
-            <!--                        <P>#festivallovers are you ready for a-->
-            <!--                        #competition #follow @envirofoneshop-->
-            <!--                        and we'll announce next week #festival</P>-->
-            <!--                        -->
-            <!--                        <div>-->
-            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">-->
-            <!--                            <span>13</span>-->
-            <!--                        </div>-->
-            <!--                    </div>-->
+                            <div class="newsSection__bigBox">
+                                <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival" title="festival">
+                                <div class="newsSection__bigBox--content">
+                                    <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                                    <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                                        #competition #follow @envirofoneshop
+                                        and we'll announce next week #festival</P>
+                                    <div class="newsSection__boxBig--icon">
+                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                                        <span class="breadcrumbInfosDatesLikes ">13</span>
+                                    </div>
+                                </div>
+                            </div>
 
-            <!--                    <div>-->
-            <!--                        <div>3. Jun 2016</div>-->
+                            <div class="newsSection__bigBox">
+                                <div class="newsSection__bigBox--content">
+                                    <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                                    <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                                        #competition #follow @envirofoneshop
+                                        and we'll announce next week #festival</P>
+                                    <div class="newsSection__boxBig--icon">
+                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                                        <span class="breadcrumbInfosDatesLikes ">13</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="newsSection__bigBox">
+                                <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival" title="festival">
+                                <div class="newsSection__bigBox--content">
+                                    <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                                    <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                                        #competition #follow @envirofoneshop
+                                        and we'll announce next week #festival</P>
+                                    <div class="newsSection__boxBig--icon">
+                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                                        <span class="breadcrumbInfosDatesLikes ">13</span>
+                                    </div>
+                                </div>
+                            </div>
+                                    <div>3. Jun 2016</div>
 
-            <!--                        <P>#festivallovers are you ready for a-->
-            <!--                            #competition #follow @envirofoneshop-->
-            <!--                            and we'll announce next week #festival-->
-            <!--                        </P>-->
-
-
-            <!--                        <div>-->
-            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
-            <!--                            <span>54</span>-->
-            <!--                        </div>-->
-
-            <!--                    </div>-->
-
-            <!--                    <div>-->
-            <!--                        <div>-->
-            <!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
-
-            <!--                        </div>-->
-
-            <!--                        <div>1m</div>-->
-
-            <!--                        <P>#jazzfest #festival #homeland #weekend</P>-->
-
-            <!--                        <div><img src="images/Icons/detail_like_filled.svg" alt="like icon"><span>5</span></div>-->
-            <!--                    </div>-->
-
-            <!--                    <div>-->
-            <!--                        <div>3. Jun 2016</div>-->
-
-            <!--                        <P>#festivallovers are you ready for a-->
-            <!--                            #competition #follow @envirofoneshop-->
-            <!--                            and we'll announce next week #festival-->
-            <!--                        </P>-->
+                                    <P>#festivallovers are you ready for a
+                                        #competition #follow @envirofoneshop
+                                        and we'll announce next week #festival
+                                    </P>
 
 
-            <!--                        <div>-->
-            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
-            <!--                            <span>26</span>-->
-            <!--                        </div>-->
+                                    <div>
+                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">
+                                        <span>26</span>
+                                    </div>
 
-            <!--                    </div>-->
+                                </div>
 
-            <!--                    <div>-->
-            <!--                        <div>-->
-            <!--                            <img src="images/Links/festival.png" alt="festival" title="festival">-->
+                                <div>
+                                    <div>
+                                        <img src="images/Links/festival.png" alt="festival" title="festival">
 
-            <!--                        </div>-->
+                                    </div>
 
-            <!--                        <div>4h</div>-->
+                                    <div>4h</div>
 
-            <!--                        <P>italiaaa #boots #italy #germany #euro2016 #camping #festival #sexylegs</P>-->
+                                    <P>italiaaa #boots #italy #germany #euro2016 #camping #festival #sexylegs</P>
 
-            <!--                        <div>-->
-            <!--                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">-->
-            <!--                            <span>47</span>-->
-            <!--                        </div>-->
-            <!--                    </div>-->
+                                    <div>
+                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">
+                                        <span>47</span>
+                                    </div>
+                                </div>
 
-            <!--                   d-->
+                               d
 
-            <!--            </div>-->
+                        </div>
 
-            <!--        &lt;!&ndash; end of mainSection &ndash;&gt;-->
+                    <!-- end of mainSection -->
         </main>
 
         <!--        &lt;!&ndash; start with footerSection &ndash;&gt;-->
