finished with newsSection

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                     garantieren dir eine erlebnisreiche Festivalzeit
                 </h3>
                 <button class="titleSection__btn footerLabels">FILTER ANZEIGEN</button>
-                <img class="titleSection__bigPicture" src="images/Links/BigTeaser.png" alt="festival picture"
+                <img class="titleSection__img" src="images/Links/BigTeaser.png" alt="festival picture"
                      title="festival picture">
             </div>
             <div class="magazinSection">
@@ -146,115 +146,114 @@
                 </div>
 
 
+            </div>
+
+            <div class="newsSection">
+                <h1 class="newsSection__h1">NEWS</h1>
+
+                <div class="newsSection__bigBox">
+                    <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival"
+                         title="festival">
+                    <div class="newsSection__bigBox--content">
+                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                        <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                            #competition #follow @envirofoneshop
+                            and we'll announce next week #festival</P>
+                        <div class="newsSection__boxBig--icon">
+                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                            <span class="breadcrumbInfosDatesLikes ">13</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="newsSection__smallBox">
+                    <div class="newsSection__smallBox--content">
+                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                        <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
+                            #competition #follow @envirofoneshop
+                            and we'll announce next week #festival</P>
+                        <div class="newsSection__boxBig--icon">
+                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                            <span class="breadcrumbInfosDatesLikes ">13</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="newsSection__bigBox">
+                    <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival"
+                         title="festival">
+                    <div class="newsSection__bigBox--content">
+                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                        <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                            #competition #follow @envirofoneshop
+                            and we'll announce next week #festival</P>
+                        <div class="newsSection__boxBig--icon">
+                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                            <span class="breadcrumbInfosDatesLikes ">13</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="newsSection__smallBox">
+                    <div class="newsSection__smallBox--content">
+                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                        <P class="newsSection__smallBox--content--content copy">#festivallovers are you ready for a
+                            #competition #follow @envirofoneshop
+                            and we'll announce next week #festival</P>
+                        <div class="newsSection__boxBig--icon">
+                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                            <span class="breadcrumbInfosDatesLikes ">13</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="newsSection__bigBox">
+                    <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival"
+                         title="festival">
+                    <div class="newsSection__bigBox--content">
+                        <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
+                        <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
+                            #competition #follow @envirofoneshop
+                            and we'll announce next week #festival</P>
+                        <div class="newsSection__boxBig--icon">
+                            <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
+                            <span class="breadcrumbInfosDatesLikes ">13</span>
+                        </div>
+                    </div>
+
+
+                </div>
+
+                <button class="magazineSection__moreBtn newsSection__moreBtn--transp">MEHR ANZEIGEN</button>
 
             </div>
 
-                        <div class="newsSection">
-                            <h1 class="newsSection__title">NEWS</h1>
-
-                            <div class="newsSection__bigBox">
-                                <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival" title="festival">
-                                <div class="newsSection__bigBox--content">
-                                    <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                                    <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                                        #competition #follow @envirofoneshop
-                                        and we'll announce next week #festival</P>
-                                    <div class="newsSection__boxBig--icon">
-                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
-                                        <span class="breadcrumbInfosDatesLikes ">13</span>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="newsSection__bigBox">
-                                <div class="newsSection__bigBox--content">
-                                    <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                                    <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                                        #competition #follow @envirofoneshop
-                                        and we'll announce next week #festival</P>
-                                    <div class="newsSection__boxBig--icon">
-                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
-                                        <span class="breadcrumbInfosDatesLikes ">13</span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="newsSection__bigBox">
-                                <img class="newsSection__boxBig--img" src="images/Links/103343561-won0.600x400.jpg" alt="festival" title="festival">
-                                <div class="newsSection__bigBox--content">
-                                    <p class="breadcrumbInfosDatesLikes">3. Jun 2016</p>
-                                    <P class="newsSection__bigBox--content--content copy">#festivallovers are you ready for a
-                                        #competition #follow @envirofoneshop
-                                        and we'll announce next week #festival</P>
-                                    <div class="newsSection__boxBig--icon">
-                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like Icon">
-                                        <span class="breadcrumbInfosDatesLikes ">13</span>
-                                    </div>
-                                </div>
-                            </div>
-                                    <div>3. Jun 2016</div>
-
-                                    <P>#festivallovers are you ready for a
-                                        #competition #follow @envirofoneshop
-                                        and we'll announce next week #festival
-                                    </P>
-
-
-                                    <div>
-                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">
-                                        <span>26</span>
-                                    </div>
-
-                                </div>
-
-                                <div>
-                                    <div>
-                                        <img src="images/Links/festival.png" alt="festival" title="festival">
-
-                                    </div>
-
-                                    <div>4h</div>
-
-                                    <P>italiaaa #boots #italy #germany #euro2016 #camping #festival #sexylegs</P>
-
-                                    <div>
-                                        <img src="images/Icons/detail_like_filled.svg" alt="like icon" title="like icon">
-                                        <span>47</span>
-                                    </div>
-                                </div>
-
-                               d
-
-                        </div>
-
-                    <!-- end of mainSection -->
+            <!-- end of mainSection -->
         </main>
 
-        <!--        &lt;!&ndash; start with footerSection &ndash;&gt;-->
-        <!--        <footer>-->
-        <!--             <div class="footerSection">-->
+                <!-- start with footerSection -->
+                <footer>
+                     <div class="footerSection">
 
-        <!--                 <div>-->
-        <!--                     <ul>-->
-        <!--                         <li>FESTIVAL</li>-->
-        <!--                         <li>MAGAZIN</li>-->
-        <!--                         <li>NEWS</li>-->
-        <!--                         <li><img src="images/Icons/navigation_backtotop.svg" alt="backtotop" title="backtotop"></li>-->
-        <!--                     </ul>-->
-        <!--                      <ul>-->
-        <!--                          <li><img src="images/Icons/socialmedia_facebook.svg" alt="facebook" title="facebook"></li>-->
-        <!--                          <li><img src="images/Icons/socialmedia_instagram.svg" alt="instagram" title="instagram"></li>-->
-        <!--                          <li><img src="images/Icons/socialmedia_snapchat.svg" alt="snapchat" title="snapchat"></li>-->
-        <!--                          <li><img src="images/Icons/socialmedia_youtube.svg" alt="youtube" title="youtube"></li>-->
-        <!--                          <li><img src="images/Icons/socialmedia_twitter.svg" alt="twitter" title="twitter"></li>-->
-        <!--                      </ul>-->
-        <!--                 </div>-->
+                         <div>
+                             <ul>
+                                 <li>FESTIVAL</li>
+                                 <li>MAGAZIN</li>
+                                 <li>NEWS</li>
+                                 <li><img src="images/Icons/navigation_backtotop.svg" alt="backtotop" title="backtotop"></li>
+                             </ul>
+                              <ul>
+                                  <li><img src="images/Icons/socialmedia_facebook.svg" alt="facebook" title="facebook"></li>
+                                  <li><img src="images/Icons/socialmedia_instagram.svg" alt="instagram" title="instagram"></li>
+                                  <li><img src="images/Icons/socialmedia_snapchat.svg" alt="snapchat" title="snapchat"></li>
+                                  <li><img src="images/Icons/socialmedia_youtube.svg" alt="youtube" title="youtube"></li>
+                                  <li><img src="images/Icons/socialmedia_twitter.svg" alt="twitter" title="twitter"></li>
+                              </ul>
+                         </div>
 
-        <!--                 <div>-->
+                         <div>
 
-        <!--                 </div>-->
-        <!--             </div>-->
-        <!--        </footer>-->
-        <!--        &lt;!&ndash; end of footerSection &ndash;&gt;-->
+                         </div>
+                     </div>
+                </footer>
+                <!-- end of footerSection -->
 
     </div>
 </div>
