--- a/src/index.html
+++ b/src/index.html
@@ -106,12 +106,12 @@
                 </div>
                 <div class="magazineSection__box">
                     <h2 class="magazineSection__box--Title">Wie soll ich mich bei Gewitter verhalten?</h2>
-                    <button class="magazineSection__box--Btn">LESEN</button>
+                    <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
                     <div class="magazineSection__box--border"></div>
                 </div>
                 <div class="magazineSection__box">
-                    <h2 class="magazineSection__box--Title">Life Hacks für den Festivalbesuch</h2>
-                    <button class="magazineSection__box--Btn">LESEN</button>
+                    <h2 class="magazineSection__box--Title">7 Life Hacks für den Festivalbesuch</h2>
+                    <button class="magazineSection__box--Btn btnTabsHeader">LESEN</button>
                     <div class="magazineSection__box--border"></div>
                 </div>
 
