styling svg discoverySection

--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,9 @@
                     Musikerlebnisse. Höre dir
                     die Samples an und entdecke deine Leidenschaft</p>
                 <div class="discoverySection__img">
-                    <div class="discoverySection__img--jazz"></div>
+                    <div class="discoverySection__img--play"></div>
+                    <div class="discoverySection__icon--hiphop">
+                    </div>
                 </div>
 
 
